[package]
name = "rustyping"
version = "0.1.0"
description = "ICMP Prometheus Exporter for multiple hosts defined on Redis database"
authors = ["Luis Felipe Dominguez Vega <ldominguez@iguanait.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
fastping-rs = "0.1.5"
hyper = "0.14.12"
prometheus = "0.9.0"
redis = "0.16.0"
lazy_static = "1.4.0"
libc = "0.2.73"
nix = "0.17.0"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
clap = "2.33.1"
config = "0.10.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'